# oscal-evidence-pipeline

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docs/: architecture.mmd
examples/: sample-assessment-results.json  sample-secret-scanner-input.json
oscal_pipeline/: __init__.py  assembler.py  cli.py  ingest.py  writer.py
oscal_pipeline/adapters/: __init__.py  base.py  registry.py  result.py  secret_scanner.py  uuid.py
oscal_pipeline/oscal/: __init__.py  slug.py
oscal_pipeline/schemas/: __init__.py  validate.py
scripts/: setup-branch-protection.sh
tests/: conftest.py  test_adapters_base.py  test_assembler.py  test_cli.py  test_examples.py  test_ingest.py  test_oscal_slug.py  test_schema_validation.py  test_secret_scanner_adapter.py  test_smoke.py  test_writer.py
tests/fixtures/: secret_scanner_empty_controls.json
tests/fixtures/secret-scanner-output/: secret_scanner_mixed.json
